--- a/styles.css
+++ b/styles.css
@@ -502,7 +502,7 @@ nav .container {
 
 /* Portfolio Section */
 .portfolio {
-  padding: 8rem 2rem;
+  padding: 5rem 2rem;
   background: var(--white);
 }
 
@@ -513,7 +513,7 @@ nav .container {
 
 .portfolio-header {
   text-align: center;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
 }
 
 .portfolio-header h2 {
@@ -572,7 +572,7 @@ nav .container {
 .portfolio-image {
   position: relative;
   width: 100%;
-  height: 200px;
+  height: 160px;
   overflow: hidden;
   background: var(--stone-light);
 }
@@ -607,7 +607,7 @@ nav .container {
 }
 
 .portfolio-content {
-  padding: 1.5rem;
+  padding: 1.25rem;
   flex-grow: 1;
   display: grid;
   grid-template-rows: auto 1fr auto auto;
@@ -633,7 +633,7 @@ nav .container {
   flex-wrap: wrap;
   gap: 0.5rem;
   align-content: flex-start;
-  min-height: 4.5rem;
+  min-height: 3.5rem;
 }
 
 .portfolio-tags .tag {
@@ -1617,6 +1617,10 @@ footer p {
 
   .portfolio-image {
     height: 140px;
+  }
+
+  .portfolio-category {
+    display: none;
   }
 
   .portfolio-content {
